sswa13servicemesh3/assets/outbound-sberuniversity-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: www-sberuniversity-online-dr
spec:
  host: www.sberuniversity.online
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 80
        tls:
          mode: SIMPLE
