sswa13servicemesh3/assets/sberuniversity-online-se.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: www-sberuniversity-online
spec:
  hosts:
    - www.sberuniversity.online
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
      targetPort: 443
    - number: 443
      name: https-port
      protocol: HTTPS
  resolution: DNS
